--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
     "query": "^0.2.0",
+    "sweetalert2": "^9.10.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
