--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "bootstrap": "^4.4.1",
+    "confetti-js": "0.0.18",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
     "query": "^0.2.0",
